fix modal on mobile

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -9,22 +9,19 @@
 }
 
 div.modal {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: 1px solid $rent-strike-color;
   background-clip: padding-box;
   background-color: white;
-  position: absolute;
-  left: 50%;
-  top: 40%;
-  transform: translate(-50%, -50%);
   padding: 0 1.5rem 1.5rem 1.5rem;
-  max-height: 500px;
   width: 95%;
   max-width: 400px;
+  max-height: 95%;
   overflow-y: scroll;
-
-  @media (max-width: 640px) {
-    width: 95%;
-  }
 }
 
 a.modal-close {
